--- a/AdvancedSoftwareEngineering/4-UI/UI/App.xaml
+++ b/AdvancedSoftwareEngineering/4-UI/UI/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="_4_UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:_4_UI"
-             StartupUri="MainWindow.xaml">
+             StartupUri="UI/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
