--- a/AdvancedSoftwareEngineering/4-UI/UI/CategoryEditor.xaml
+++ b/AdvancedSoftwareEngineering/4-UI/UI/CategoryEditor.xaml
@@ -33,16 +33,16 @@
 
         <Label Grid.Column="1" Grid.Row="0" FontSize="20" Margin="0,20,0,0" HorizontalAlignment="Center" VerticalAlignment="Top">Category Editor</Label>
         <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="25,0,0,165"  HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="categoryLabel">Category</Label>
-        <ListBox Grid.Column="1" Grid.Row="0" Margin="25,0,0,100"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" SelectionChanged="CategorySelectionChanged" x:Name="categoryListBox"/>
+        <ComboBox Grid.Column="1" Grid.Row="0" Margin="25,0,0,100"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" SelectionChanged="CategorySelectionChanged" x:Name="categoryComboBox"/>
 
         <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="20,0,0,15"  HorizontalAlignment="Left" VerticalAlignment="Center">Categoryname</Label>
         <TextBox Grid.Column="1" Grid.Row="0" Margin="25,50,0,0"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="nameTextBox"></TextBox>
         <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="145,0,0,15"  HorizontalAlignment="Left" VerticalAlignment="Center">Colour</Label>
-        <ListBox Grid.Column="1" Grid.Row="0" Margin="145,50,0,0"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="colourListBox"/>
+        <ComboBox Grid.Column="1" Grid.Row="0" Margin="145,50,0,0"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="colourComboBox"/>
         <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="270,0,0,15"  HorizontalAlignment="Left" VerticalAlignment="Center">Limit</Label>
         <TextBox Grid.Column="1" Grid.Row="0" Margin="270,50,0,0"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="limitTextBox"></TextBox>
         <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="395,0,0,15"  HorizontalAlignment="Left" VerticalAlignment="Center">Currency</Label>
-        <ListBox Grid.Column="1" Grid.Row="0" Margin="395,50,0,0"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="currencyListBox"/>
+        <ComboBox Grid.Column="1" Grid.Row="0" Margin="395,50,0,0"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="currencyComboBox"/>
 
         <Button Grid.Column="1" Grid.Row="0" Margin="0,150,50,0" Width="125" Height="25" HorizontalAlignment="Right" Click="ClickCreateCategory" x:Name="createCategoryButton">Create Category</Button>
     </Grid>
