--- a/AdvancedSoftwareEngineering/4-UI/UI/CategoryEditor.xaml
+++ b/AdvancedSoftwareEngineering/4-UI/UI/CategoryEditor.xaml
@@ -45,5 +45,6 @@
         <ComboBox Grid.Column="1" Grid.Row="0" Margin="395,50,0,0"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="currencyComboBox"/>
 
         <Button Grid.Column="1" Grid.Row="0" Margin="0,150,50,0" Width="125" Height="25" HorizontalAlignment="Right" Click="ClickCreateCategory" x:Name="createCategoryButton">Create Category</Button>
+        <Button Grid.Column="1" Grid.Row="0" Margin="0,150,50,0" Width="125" Height="25" HorizontalAlignment="Right" Click="ClickSaveChanges" x:Name="saveChangesButton">Save Changes</Button>
     </Grid>
 </Page>
