--- a/AdvancedSoftwareEngineering/4-UI/UI/Home.xaml
+++ b/AdvancedSoftwareEngineering/4-UI/UI/Home.xaml
@@ -21,6 +21,9 @@
         <Button Grid.Column="0" Grid.Row="2" Margin="0,10,0,0" Width="125" Height="25" HorizontalAlignment="Right" Click="EditCategoryClick">
             Edit Categories
         </Button>
+        <Button Grid.Column="0" Grid.Row="2" Margin="0,10,140,0" Width="125" Height="25" HorizontalAlignment="Right" Click="EditSpendingClick">
+            Edit Spendings
+        </Button>
 
     </Grid>
 </Page>
