--- a/AdvancedSoftwareEngineering/4-UI/UI/SpendingEditor.xaml
+++ b/AdvancedSoftwareEngineering/4-UI/UI/SpendingEditor.xaml
@@ -31,17 +31,17 @@
         
         <Label Grid.Column="1" Grid.Row="0" FontSize="20" Margin="0,20,0,0" HorizontalAlignment="Center" VerticalAlignment="Top">Spending Editor</Label>
         <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="25,0,0,165"  HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="categoryLabel">Choose a category</Label>
-        <ComboBox Grid.Column="1" Grid.Row="0" Margin="25,0,0,100"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" SelectionChanged="CategorySelectionChanged" x:Name="categoryComboBox"/>
+        <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="200,0,0,165"  HorizontalAlignment="Left" VerticalAlignment="Center">Currency</Label>
+        <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="200,0,0,100"  HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="currencyLabel"/>
+        <ComboBox Grid.Column="1" Grid.Row="0" Margin="25,0,0,100"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" SelectionChanged="ChangeSelectedCategory" x:Name="categoryComboBox"/>
         <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="20,0,0,15"  HorizontalAlignment="Left" VerticalAlignment="Center">Amount</Label>
         <TextBox Grid.Column="1" Grid.Row="0" Margin="25,50,0,0"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="moneyTextBox"></TextBox>
-        <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="145,0,0,15"  HorizontalAlignment="Left" VerticalAlignment="Center">Currency</Label>
-        <ComboBox Grid.Column="1" Grid.Row="0" Margin="145,50,0,0"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="currencyComboBox"/>
-        
+
         <DatePicker Grid.Column="1" Grid.Row="0" FontSize="16" Margin="270,50,0,0"  HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="spendingDatePicker"></DatePicker>
         
-        <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="20,110,0,0"  HorizontalAlignment="Left" VerticalAlignment="Center">Description</Label>
+        <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="20,222,0,88"  HorizontalAlignment="Left" VerticalAlignment="Center">Description</Label>
         <TextBox Grid.Column="1" Grid.Row="0" Margin="25,225,0,0"  Width="200" Height="50" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="descriptionTextBox"></TextBox>
 
-        <Button Grid.Column="1" Grid.Row="0" Margin="0,225,100,0" Width="125" Height="25" HorizontalAlignment="Right" Click="ClickAddSpending" x:Name="addSpendingButton">Save Changes</Button>
+        <Button Grid.Column="1" Grid.Row="0" Margin="0,225,100,0" Width="125" Height="25" HorizontalAlignment="Right" Click="ClickAddSpending" x:Name="addSpendingButton">Add spending</Button>
     </Grid>
 </Page>
