--- a/AdvancedSoftwareEngineering/4-UI/UI/Home.xaml
+++ b/AdvancedSoftwareEngineering/4-UI/UI/Home.xaml
@@ -10,6 +10,7 @@
 
     <Grid Margin="10,0,10,10">
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -18,12 +19,14 @@
             <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Column="0" Grid.Row="2" Margin="0,10,0,0" Width="125" Height="25" HorizontalAlignment="Right" Click="EditCategoryClick">
+        <Button Grid.Column="1" Grid.Row="2" Margin="0,10,140,0" Width="125" Height="25" HorizontalAlignment="Right" Click="EditSpendingClick">
+            Add Spendings
+        </Button>
+        <Button Grid.Column="1" Grid.Row="2" Margin="0,10,0,0" Width="125" Height="25" HorizontalAlignment="Right" Click="EditCategoryClick">
             Edit Categories
         </Button>
-        <Button Grid.Column="0" Grid.Row="2" Margin="0,10,140,0" Width="125" Height="25" HorizontalAlignment="Right" Click="EditSpendingClick">
-            Edit Spendings
+        <Button Grid.Column="1" Grid.Row="2" Margin="0,10,280,0" Width="125" Height="25" HorizontalAlignment="Right" Click="SpendingOverviewClick">
+            Spending Overview
         </Button>
-
     </Grid>
 </Page>
