--- a/AdvancedSoftwareEngineering/4-UI/UI/CategoryEditor.xaml
+++ b/AdvancedSoftwareEngineering/4-UI/UI/CategoryEditor.xaml
@@ -43,6 +43,7 @@
         <TextBox Grid.Column="1" Grid.Row="0" Margin="270,50,0,0"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="limitTextBox"></TextBox>
         <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="395,0,0,15"  HorizontalAlignment="Left" VerticalAlignment="Center">Currency</Label>
         <ComboBox Grid.Column="1" Grid.Row="0" Margin="395,50,0,0"  Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="currencyComboBox"/>
+        <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="20,225,0,15"  HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="Red" x:Name="errorLabel"/>
 
         <Button Grid.Column="1" Grid.Row="0" Margin="0,150,50,0" Width="125" Height="25" HorizontalAlignment="Right" Click="ClickCreateCategory" x:Name="createCategoryButton">Create Category</Button>
         <Button Grid.Column="1" Grid.Row="0" Margin="0,150,50,0" Width="125" Height="25" HorizontalAlignment="Right" Click="ClickSaveChanges" x:Name="saveChangesButton">Save Changes</Button>
