--- a/AdvancedSoftwareEngineering/4-UI/UI/SpendingEditor.xaml
+++ b/AdvancedSoftwareEngineering/4-UI/UI/SpendingEditor.xaml
@@ -42,6 +42,7 @@
         <Label Grid.Column="1" Grid.Row="0" FontSize="16" Margin="20,222,0,88"  HorizontalAlignment="Left" VerticalAlignment="Center">Description</Label>
         <TextBox Grid.Column="1" Grid.Row="0" Margin="25,225,0,0"  Width="200" Height="50" HorizontalAlignment="Left" VerticalAlignment="Center" x:Name="descriptionTextBox"></TextBox>
 
+        <Label Grid.Column="1" Grid.RowSpan="2" FontSize="16" Margin="20,350,0,88"  HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="Red" x:Name="errorLabel"/>
         <Button Grid.Column="1" Grid.Row="0" Margin="0,225,100,0" Width="125" Height="25" HorizontalAlignment="Right" Click="ClickAddSpending" x:Name="addSpendingButton">Add spending</Button>
     </Grid>
 </Page>
