--- a/AdvancedSoftwareEngineering/4-UI/UI/Home.xaml
+++ b/AdvancedSoftwareEngineering/4-UI/UI/Home.xaml
@@ -19,7 +19,20 @@
             <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Column="1" Grid.Row="2" Margin="0,10,140,0" Width="125" Height="25" HorizontalAlignment="Right" Click="EditSpendingClick">
+        <Label Grid.Column="0" Grid.Row="0" HorizontalContentAlignment="Center" VerticalAlignment="Top" Margin="0,100,0,0" FontSize="20">Category</Label>
+        <ComboBox Grid.Column="0" Grid.Row="0" Margin="0,150,0,0"  Width="100" Height="25" HorizontalAlignment="Center" VerticalAlignment="Top" SelectionChanged="ChangeSelectedCategory" x:Name="categoryComboBox"/>
+        <Label Grid.Column="0" Grid.Row="0" HorizontalContentAlignment="Center" VerticalAlignment="Top" Margin="0,200,0,0" FontSize="16" x:Name="datepickerLabel"/>
+        <DatePicker Grid.Column="0" Grid.Row="0" Margin="0,250,0,0"  Width="100" Height="25" HorizontalAlignment="Center" VerticalAlignment="Top" SelectedDateChanged="ChangeSelectedCategory" x:Name="homeDatePicker"/>
+
+        <Label Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Left" VerticalAlignment="Top" Margin="50,100,0,0" FontSize="20">Monthly limit:</Label>
+        <Label Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Left" VerticalAlignment="Top" Margin="300,100,0,0" FontSize="20" x:Name="limitLable"/>
+        <Label Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Left" VerticalAlignment="Top" Margin="50,150,0,0" FontSize="20">Sum of spendings:</Label>
+        <Label Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Left" VerticalAlignment="Top" Margin="300,150,0,0" FontSize="20" x:Name="spendingLabel"/>
+        <Label Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Left" VerticalAlignment="Top" Margin="50,165,0,0" FontSize="20">________________________________________________________________________________________</Label>
+        <Label Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Left" VerticalAlignment="Top" Margin="50,200,0,0" FontSize="20">Balance:</Label>
+        <Label Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Left" VerticalAlignment="Top" Margin="300,200,0,0" FontSize="20" x:Name="balanceLabel"/>
+
+        <Button Grid.Column="1" Grid.Row="2" Margin="0,10,140,0" Width="150" Height="25" HorizontalAlignment="Right" Click="EditSpendingClick">
             Add Spendings
         </Button>
         <Button Grid.Column="1" Grid.Row="2" Margin="0,10,0,0" Width="125" Height="25" HorizontalAlignment="Right" Click="EditCategoryClick">
